fix(ui): adjust subscribe box padding on mobile viewports

--- a/src/components/post/subscribe.module.scss
+++ b/src/components/post/subscribe.module.scss
@@ -1,15 +1,20 @@
+$padding: 10px 5vw;
+
 .subscribe {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     border-radius: 0.5rem;
     border: solid 2px;
     margin-bottom: 20px;
+    padding: $padding;
 }
 
 .error {
-    color: red;
+    color: rgb(192, 0, 0);
     font-size: 0.8rem;
     margin-top: 0.5rem;
+    padding: $padding;
 }
